# py-todo-list-cli

./: .gitignore  README.md  pyproject.toml  run_tests.py  sample_todos.json
src/todo/: __init__.py
src/todo/sql/sqlite3/: __init__.py
tests/: __init__.py  test_data.json  test_data.sql  test_todoapp.py
